--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,11 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-.idea/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
